@@ -7,7 +7,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.7
 
 ## Mod properties
-mod_version=1.5.1
+mod_version=1.5.2
 maven_group=com.github.iunius118.chilibulletweapons
 archives_base_name=chilibulletweapons-fabric
 
