@@ -1,0 +1,43 @@
+package com.github.iunius118.chilibulletweapons.client;
+
+import com.github.iunius118.chilibulletweapons.ChiliBulletWeapons;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.vertex.VertexConsumer;
+import net.fabricmc.api.EnvType;
+import net.fabricmc.api.Environment;
+import net.minecraft.client.model.EntityModel;
+import net.minecraft.client.model.geom.ModelLayerLocation;
+import net.minecraft.client.model.geom.ModelPart;
+import net.minecraft.client.model.geom.PartPose;
+import net.minecraft.client.model.geom.builders.CubeDeformation;
+import net.minecraft.client.model.geom.builders.CubeListBuilder;
+import net.minecraft.client.model.geom.builders.LayerDefinition;
+import net.minecraft.client.model.geom.builders.MeshDefinition;
+import net.minecraft.world.entity.Entity;
+
+@Environment(EnvType.CLIENT)
+public class ChiliBulletModel<T extends Entity> extends EntityModel<T> {
+    public static final ModelLayerLocation LAYER_LOCATION = new ModelLayerLocation(ChiliBulletWeapons.makeId("chili_bullet"), "main");
+    private final ModelPart bullet;
+
+    public ChiliBulletModel(ModelPart root) {
+        bullet = root.getChild("bullet");
+    }
+
+    public static LayerDefinition createBodyLayer() {
+        var meshdefinition = new MeshDefinition();
+        var partdefinition = meshdefinition.getRoot();
+        partdefinition.addOrReplaceChild("bullet",
+                CubeListBuilder.create().texOffs(0, 0).addBox(-0.5F, -0.5F, -0.5F, 1.0F, 1.0F, 1.0F, new CubeDeformation(0.0F)), PartPose.ZERO);
+        return LayerDefinition.create(meshdefinition, 16, 16);
+    }
+
+    @Override
+    public void setupAnim(T entity, float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch) {
+    }
+
+    @Override
+    public void renderToBuffer(PoseStack poseStack, VertexConsumer vertexConsumer, int packedLight, int packedOverlay, float red, float green, float blue, float alpha) {
+        bullet.render(poseStack, vertexConsumer, packedLight, packedOverlay, red, green, blue, alpha);
+    }
+}
