@@ -3,6 +3,8 @@
 [Source](https://github.com/Iunius118/ChiliBulletWeapons).
 
 ## [Unreleased]
+### Changed
+- Use entity model to render chili bullet.
 
 ## [1.5.1]
 - Require Minecraft 1.20.1-1.20.4, Fabric Loader 0.15.x+, Fabric API, and Cloth Config API.
